--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.9.0",
     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-    "puppeteer": "^23.3.0",
+"puppeteer": "19.11.1",
     "whatsapp-web.js": "^1.23.0"
   }
 }
