--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "WhatsApp OTP Service",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "axios": "^1.9.0",
     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-"puppeteer": "19.11.1",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.25.0"
   }
 }
