--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "whatsapp-otp",
   "version": "1.0.0",
-  "description": "WhatsApp OTP Service",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "dependencies": {
-    "axios": "^1.9.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.25.0"
+    "whatsapp-web.js": "^1.26.0",
+    "puppeteer": "^24.9.0"
   }
 }
