--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "whatsapp-otp",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
