--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "2.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop whatsapp-otp",
+    "pm2:restart": "pm2 restart whatsapp-otp",
+    "pm2:delete": "pm2 delete whatsapp-otp",
+    "pm2:logs": "pm2 logs whatsapp-otp"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0",
     "puppeteer": "^24.9.0"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
