--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.21.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0",
-    "puppeteer": "^24.15.0"
+    "puppeteer": "^24.15.0",
+    "dotenv": "^16.4.7",
+    "cookie-parser": "^1.4.7"
   },
   "engines": {
     "node": ">=20.0.0",
